# ML_Model_loan_default_prediction

./: .gitignore  pyproject.toml
backend/: main.py
data/raw/: loan_data.csv
frontend/: index.html  package-lock.json
frontend/src/: App.jsx
frontend/src/pages/: PredictPage.jsx  UploadPage.jsx
frontend/src/utils/: api.js
models/: loan_default_model.pkl  model_metadata.json  scaler.pkl
src/: eda.py  train.py
